# automation

./: README.md  emails.txt  phone_numbers.txt  pyproject.toml
automation/: automation.py
tests/: test_automation.py
