[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["Batool Malkawi <batoolmalkawii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2020.11.13"
phonenumbers = "^8.12.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
